[package]
name = "superboring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.9.6", features = [
    "getrandom",
    "hazmat",
    "pem",
    "sha2",
    "std",
    "u64_digit",
] }

rand = { version = "0.8.5" }
hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
