[package]
name = "superboring"
description = "A reimplementation of the 'boring' crate in pure Rust."
version = "0.1.5"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"
license = "ISC"
repository = "https://github.com/jedisct1/rust-superboring"
homepage = "https://github.com/jedisct1/rust-superboring"
categories = ["wasm", "api-bindings", "cryptography"]
keywords = ["boringssl", "crypto", "cryptography", "boring", "rust"]
readme = "README.md"

[dependencies]
rrsa = { package = "rsa", version = "0.9.9", optional = true, features = [
    "getrandom",
    "hazmat",
    "pem",
    "sha2",
    "std",
    "u64_digit",
] }

rand = { version = "0.8.5", optional = true }
hmac-sha256 = { version = "1.1.12", optional = true, features = ["traits010"] }
hmac-sha512 = { version = "1.1.7", optional = true, features = [
    "traits010",
    "sha384",
] }

# Do not delete: this is a required hack for the wasm32-unknown-unknown target used by dependencies
[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["enabled"]
enabled = ["rrsa", "rand", "hmac-sha256", "hmac-sha512"]
